--- a/spot-pricing/requirements.txt
+++ b/spot-pricing/requirements.txt
@@ -3,8 +3,11 @@ boto3==1.4.7
 botocore==1.7.22
 cached-property==1.3.1
 docutils==0.14
+funcsigs==1.0.2
 futures==3.1.1
 jmespath==0.9.3
+mock==2.0.0
+pbr==3.1.1
 python-dateutil==2.6.1
 pytz==2017.2
 s3transfer==0.1.11
